RESOLVED FIXED278413
[JSC] Throw RangeError when WebAssembly.Tag.getArg's number is out of range
https://bugs.webkit.org/show_bug.cgi?id=278413
Summary [JSC] Throw RangeError when WebAssembly.Tag.getArg's number is out of range
Yusuke Suzuki
Reported 2024-08-20 13:10:10 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-20 13:10:26 PDT
Yusuke Suzuki
Comment 2 2024-08-20 13:12:08 PDT
EWS
Comment 3 2024-08-20 15:04:28 PDT
Committed 282520@main (3935b8befec9): <https://commits.webkit.org/282520@main> Reviewed commits have been landed. Closing PR #32480 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.