[JSC] Throw RangeError when WebAssembly.Tag.getArg's number is out of range https://bugs.webkit.org/show_bug.cgi?id=278413 rdar://134364529

Reviewed by Mark Lam.

WebAssembly.Tag.getArg should throw RangeError instead of TypeError for out of range number argument.

* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/exception/getArg.tentative.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/wasm/jsapi/exception/getArg.tentative.any.worker-expected.txt:
* Source/JavaScriptCore/wasm/js/JSWebAssemblyHelpers.h:
(JSC::toNonWrappingUint32):
* Source/JavaScriptCore/wasm/js/WebAssemblyExceptionPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/282520@main